# personaforge

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  github-action-template.yml  personaforge.yaml  pyproject.toml  requirements.txt  setup.sh  skills-lock.json
.github/workflows/: ci.yml  release.yml  sample-voice-agent-ci.yml
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  ci-cd-integration.md  cli-commands.md  configuration-guide.md  dashboard-studio.md  getting-started.md  troubleshooting.md
personaforge/backend/app/: main.py
personaforge/backend/app/cli/: main.py
personaforge/backend/app/database/: connection.py  models.py
personaforge/backend/app/integrations/: base.py  elevenlabs.py  llm.py
personaforge/backend/app/judge/: evaluator.py
personaforge/backend/app/personas/: engine.py
personaforge/backend/app/runner/: orchestrator.py  queue_manager.py  runner.py  workers.py
personaforge/backend/app/scenarios/: engine.py
personaforge/web/: package-lock.json  package.json
personas/: angry_customer.yaml  forgetful_senior.yaml  impatient_traveler.yaml  non_tech_user.yaml
policies/: refund.md  scheduling_rules.md  security_rules.md  travel_rules.md
scenarios/: appointment_scheduling.yaml  password_reset.yaml  telecom_refund.yaml  travel_cancellation.yaml
tests/: test_api.py  test_cli_e2e.py  test_cli_part4.py  test_database_models.py  test_elevenlabs_http.py  test_judge_engine.py  test_llm_client.py  test_persona_engine.py  test_runner.py  test_workers.py  verify_core_engines.py
(+9 files in other folders)
